force-app/main/default/objects/CJFW_SurveyQuestion__c/CJFW_SurveyQuestion__c.object-meta.xml
<CustomObject>
    <description>[P2] 설문지 질문</description>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>SQ{YY}{MM}{DD}{000000}</displayFormat>
        <label>AutoNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>