force-app/main/default/objects/CJFW_SurveyQuestion__c/fields/DateType__c.field-meta.xml
<CustomField>
    <fullName>DateType__c</fullName>
    <description>날짜유형 (From/ To) 설정</description>
    <label>Date Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From/To</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>