force-app/main/default/objects/CJFW_SurveyQuestion__c/fields/MultipleChoice__c.field-meta.xml
<CustomField>
    <fullName>MultipleChoice__c</fullName>
    <description>객관식 유형</description>
    <label>Multiple Choice</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>singular</fullName>
                <label>단수</label>
            </value>
            <value>
                <fullName>plural</fullName>
                <label>복수</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>