force-app/main/default/objects/CJFW_SurveyQuestion__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <description>설문지</description>
    <label>Survey</label>
    <referenceTo>CJFW_Survey__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>