force-app/main/default/objects/CJFW_SurveyQuestion__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>질문유형</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>openended</fullName>
                <label>주관식</label>
            </value>
            <value>
                <fullName>multiple</fullName>
                <label>객관식</label>
            </value>
            <value>
                <fullName>date</fullName>
                <label>날짜</label>
            </value>
            <value>
                <fullName>time</fullName>
                <label>시간</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>